sample/retrieveUnpackaged/objects/SEW_Event__c.object
<CustomObject>
    <fields>
        <fullName>Active_water_off__c</fullName>
        <label># Active Water Off</label>
        <summaryFilterItems>
            <field>WSI__c.Water_state__c</field>
            <operation>equals</operation>
            <value>Water is off</value>
        </summaryFilterItems>
        <summaryForeignKey>WSI__c.SEW_Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coordinates__c</fullName>
        <label>Coordinates</label>
        <scale>8</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Source Event Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SEW Events</relationshipLabel>
        <relationshipName>SEW_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Completion__c</fullName>
        <label>Expected Completion</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Expected_Response__c</fullName>
        <label>Expected Response</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Montage Job Number</description>
        <externalId>true</externalId>
        <label>Event ID</label>
        <length>12</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Full_Address__c</fullName>
        <label>Full Problem Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Further_work__c</fullName>
        <label>Further work</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Planned_WSI__c</fullName>
        <formula>Planned_WSI__c  &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Planned WSI?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hidden_Public_End__c</fullName>
        <formula>IF( Hidden_WSI_Count__c &gt; 0,
	IF(TEXT(Public_Status__c) = &quot;In Progress&quot;,
		Hidden_WSI_Planned_Finish_Latest__c,
		Hidden_WSI_Actual_Finish_Latest__c
	),
	Expected_Completion__c

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(Hidden) Public End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Hidden_Public_Start__c</fullName>
        <formula>IF( Hidden_WSI_Count__c &gt; 0,
	IF(TEXT(Public_Status__c) = &quot;In Progress&quot;,
		Hidden_WSI_Planned_Start_Earliest__c,
		Hidden_WSI_Actual_Start_Earliest__c
	),
	Expected_Response__c

)</formula>
        <label>(Hidden) Public Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Hidden_WSI_Actual_Finish_Latest__c</fullName>
        <label>(Hidden) WSI Actual Finish Latest</label>
        <summarizedField>WSI__c.Actual_Finish__c</summarizedField>
        <summaryForeignKey>WSI__c.SEW_Event__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Hidden_WSI_Actual_Start_Earliest__c</fullName>
        <label>(Hidden) WSI Actual Start Earliest</label>
        <summarizedField>WSI__c.Actual_Start__c</summarizedField>
        <summaryForeignKey>WSI__c.SEW_Event__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Hidden_WSI_Count__c</fullName>
        <label>(Hidden) WSI Count</label>
        <summaryForeignKey>WSI__c.SEW_Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Hidden_WSI_Planned_Finish_Latest__c</fullName>
        <label>(Hidden) WSI Planned Finish Latest</label>
        <summarizedField>WSI__c.Planned_Finish__c</summarizedField>
        <summaryForeignKey>WSI__c.SEW_Event__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Hidden_WSI_Planned_Start_Earliest__c</fullName>
        <label>(Hidden) WSI Planned Start Earliest</label>
        <summarizedField>WSI__c.Planned_Start__c</summarizedField>
        <summaryForeignKey>WSI__c.SEW_Event__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IF(LOWER( Internal_Type__c ) = &apos;discoloured water&apos;, IMAGE(&quot;/resource/1403517872000/IconDiscolouredWaterSmall&quot;, &quot;checked&quot;),
					IF(LOWER( Internal_Type__c ) = &apos;scheduled works&apos;,IMAGE(&quot;/resource/1403517872000/IconScheduledWorksSmall&quot;, &quot;checked&quot;),
						IF(LOWER( Internal_Type__c ) = &apos;emergency works&apos;,IMAGE(&quot;/resource/1398993178000/IconEmergencyWorkSmall&quot;, &quot;checked&quot;),&apos;&apos;))

	)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Type__c</fullName>
        <formula>IF(Has_Planned_WSI__c = true,&apos;Scheduled Works&apos;,
IF(Water_is_Off__c = true,&apos;Emergency Works&apos;,&apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Internal Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Government_Area__c</fullName>
        <label>Local Government Area</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nearest_Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nearest Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>SEW Events</relationshipLabel>
        <relationshipName>SEW_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_affected_properties__c</fullName>
        <label>Number of affected properties</label>
        <summaryForeignKey>Event_Affected_Property__c.SEW_Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Planned_WSI__c</fullName>
        <label># Planned WSI</label>
        <summaryFilterItems>
            <field>WSI__c.Type__c</field>
            <operation>equals</operation>
            <value>Planned</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WSI__c.Hidden_WSI_Planned_Start_Date_counter__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>WSI__c.SEW_Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Public_Status__c</fullName>
        <label>Public status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Published_to_IVR__c</fullName>
        <formula>IF(  Roll_up_IVR_Actions__c  &gt; 0, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Published to IVR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Published_to_Internet__c</fullName>
        <formula>IF( Roll_up_Internet_Actions__c  &gt; 0, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Published to Internet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quality_Indicator__c</fullName>
        <label>Quality Indicator</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Roll_up_IVR_Actions__c</fullName>
        <label>Roll up IVR Actions</label>
        <summarizedField>Event_Action__c.Hidden_Published_to_IVR_Flag__c</summarizedField>
        <summaryForeignKey>Event_Action__c.SEW_Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Roll_up_Internet_Actions__c</fullName>
        <label>Roll up Internet Actions</label>
        <summarizedField>Event_Action__c.Hidden_Published_to_Internet_Flag__c</summarizedField>
        <summaryForeignKey>Event_Action__c.SEW_Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Source_System_Modified_Date__c</fullName>
        <label>Source System Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Source_system_status__c</fullName>
        <label>Source system status</label>
        <picklist>
            <picklistValues>
                <fullName>Not started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Transit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working elsewhere</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Timestamp__c</fullName>
        <label>Status Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Street_Name__c</fullName>
        <label>Street Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Number__c</fullName>
        <label>Street Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Type__c</fullName>
        <label>Street Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Number__c</fullName>
        <label>Unit Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Type__c</fullName>
        <label>Unit Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSI_Count__c</fullName>
        <label>WSI Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Water_is_Off__c</fullName>
        <formula>Active_water_off__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Water is Off</label>
        <type>Checkbox</type>
    </fields>
    <label>SEW Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>Full_Address__c</columns>
        <columns>Event_Type__c</columns>
        <columns>Image__c</columns>
        <columns>Public_Status__c</columns>
        <columns>Published_to_Internet__c</columns>
        <columns>Published_to_IVR__c</columns>
        <columns>Number_of_affected_properties__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_no_dry_tapping</fullName>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>Full_Address__c</columns>
        <columns>Event_Type__c</columns>
        <columns>Image__c</columns>
        <columns>Public_Status__c</columns>
        <columns>Published_to_Internet__c</columns>
        <columns>Published_to_IVR__c</columns>
        <columns>Number_of_affected_properties__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Type__c</field>
            <operation>notEqual</operation>
            <value>dry tapping</value>
        </filters>
        <label>All - No Dry Tapping</label>
    </listViews>
    <listViews>
        <fullName>Complaint_for_water_colour_In_progress</fullName>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>Full_Address__c</columns>
        <columns>Event_Type__c</columns>
        <columns>Image__c</columns>
        <columns>Published_to_Internet__c</columns>
        <columns>Published_to_IVR__c</columns>
        <columns>Number_of_affected_properties__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Public_Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <filters>
            <field>Event_Type__c</field>
            <operation>equals</operation>
            <value>Complaint for water colour brown</value>
        </filters>
        <label>Complaint for water colour - In progress</label>
    </listViews>
    <listViews>
        <fullName>Priority_1_In_progress</fullName>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>Full_Address__c</columns>
        <columns>Event_Type__c</columns>
        <columns>Image__c</columns>
        <columns>Published_to_Internet__c</columns>
        <columns>Published_to_IVR__c</columns>
        <columns>Number_of_affected_properties__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Priority__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Source_system_status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <label>Priority 1 - In progress</label>
    </listViews>
    <listViews>
        <fullName>Priority_2_In_progress</fullName>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>Full_Address__c</columns>
        <columns>Event_Type__c</columns>
        <columns>Image__c</columns>
        <columns>Published_to_Internet__c</columns>
        <columns>Published_to_IVR__c</columns>
        <columns>Number_of_affected_properties__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Priority__c</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>Source_system_status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <label>Priority 2 - In progress</label>
    </listViews>
    <listViews>
        <fullName>Priority_3_In_progress</fullName>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>Full_Address__c</columns>
        <columns>Event_Type__c</columns>
        <columns>Image__c</columns>
        <columns>Published_to_Internet__c</columns>
        <columns>Published_to_IVR__c</columns>
        <columns>Number_of_affected_properties__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Priority__c</field>
            <operation>equals</operation>
            <value>3</value>
        </filters>
        <filters>
            <field>Source_system_status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <label>Priority 3 - In progress</label>
    </listViews>
    <listViews>
        <fullName>Priority_4_In_progress</fullName>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>Full_Address__c</columns>
        <columns>Event_Type__c</columns>
        <columns>Image__c</columns>
        <columns>Published_to_Internet__c</columns>
        <columns>Published_to_IVR__c</columns>
        <columns>Number_of_affected_properties__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Priority__c</field>
            <operation>equals</operation>
            <value>4</value>
        </filters>
        <filters>
            <field>Source_system_status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <label>Priority 4 - In progress</label>
    </listViews>
    <listViews>
        <fullName>Published_to_Internet</fullName>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>Street_Name__c</columns>
        <columns>Full_Address__c</columns>
        <columns>Image__c</columns>
        <columns>Number_of_affected_properties__c</columns>
        <columns>Published_to_Internet__c</columns>
        <columns>Published_to_IVR__c</columns>
        <columns>Source_system_status__c</columns>
        <columns>Public_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Published_to_Internet__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Public_Status__c</field>
            <operation>equals</operation>
            <value>In Progress,Resolved</value>
        </filters>
        <label>Published to Internet</label>
    </listViews>
    <listViews>
        <fullName>Recycled_Water_Network_Category_filter</fullName>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>Full_Address__c</columns>
        <columns>Event_Type__c</columns>
        <columns>Image__c</columns>
        <columns>Published_to_Internet__c</columns>
        <columns>Published_to_IVR__c</columns>
        <columns>Number_of_affected_properties__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Has_Planned_WSI__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>4 Recycled Water Network</value>
        </filters>
        <label>Recycled Water Network Category filter</label>
    </listViews>
    <listViews>
        <fullName>Requires_Publishing</fullName>
        <columns>NAME</columns>
        <columns>Image__c</columns>
        <columns>Has_Planned_WSI__c</columns>
        <columns>Event_Type__c</columns>
        <columns>City__c</columns>
        <columns>Street_Name__c</columns>
        <columns>Street_Type__c</columns>
        <columns>Class__c</columns>
        <columns>Priority__c</columns>
        <columns>Public_Status__c</columns>
        <columns>Number_of_affected_properties__c</columns>
        <columns>Published_to_Internet__c</columns>
        <columns>Hidden_Public_Start__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WSI_Count__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Published_to_Internet__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Public_Status__c</field>
            <operation>notEqual</operation>
            <value>Resolved,Completed</value>
        </filters>
        <label>Requires Publishing</label>
    </listViews>
    <listViews>
        <fullName>X1_Water_Network_In_Progress_Unplanned</fullName>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>Full_Address__c</columns>
        <columns>Event_Type__c</columns>
        <columns>Image__c</columns>
        <columns>Published_to_Internet__c</columns>
        <columns>Published_to_IVR__c</columns>
        <columns>Number_of_affected_properties__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WSI_Count__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Has_Planned_WSI__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>1 Water Network</value>
        </filters>
        <filters>
            <field>Source_system_status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <label>1 Water Network-In Progress &amp; Unplanned</label>
    </listViews>
    <listViews>
        <fullName>X1_Water_Network_In_Progress_planned</fullName>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>Full_Address__c</columns>
        <columns>Event_Type__c</columns>
        <columns>Image__c</columns>
        <columns>Published_to_Internet__c</columns>
        <columns>Published_to_IVR__c</columns>
        <columns>Number_of_affected_properties__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WSI_Count__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Has_Planned_WSI__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>1 Water Network</value>
        </filters>
        <filters>
            <field>Source_system_status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <label>1 Water Network-In Progress &amp; Planned</label>
    </listViews>
    <listViews>
        <fullName>X4_Recycled_Water_In_Progress_Planned</fullName>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>Full_Address__c</columns>
        <columns>Event_Type__c</columns>
        <columns>Image__c</columns>
        <columns>Published_to_Internet__c</columns>
        <columns>Published_to_IVR__c</columns>
        <columns>Number_of_affected_properties__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WSI_Count__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Has_Planned_WSI__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>4 Recycled Water Network</value>
        </filters>
        <filters>
            <field>Source_system_status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <label>4 Recycled Water-In Progress &amp; Planned</label>
    </listViews>
    <listViews>
        <fullName>X4_Recycled_Water_In_Progress_Unplanned</fullName>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>Full_Address__c</columns>
        <columns>Event_Type__c</columns>
        <columns>Image__c</columns>
        <columns>Published_to_Internet__c</columns>
        <columns>Published_to_IVR__c</columns>
        <columns>Number_of_affected_properties__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WSI_Count__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Has_Planned_WSI__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>4 Recycled Water Network</value>
        </filters>
        <filters>
            <field>Source_system_status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <label>4 Recycled Water-In Progress &amp; Unplanned</label>
    </listViews>
    <nameField>
        <label>Event Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SEW Events</pluralLabel>
    <recordTypes>
        <fullName>Montage</fullName>
        <active>true</active>
        <label>Montage</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>false</active>
        <label>Other</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>